base/src/test/resources/failure/tyck/erased.aya.txt
In file $FILE:4:75 ->

  2 |   | value: A
  3 | 
  4 | def badSquashElim {A: Type} {Q: Type} (f: A -> Q) (squash: Squash A): Q => f squash.value
                                                                                 ^------------^

Error: The term is expected to be not erased erased A

1 error(s), 0 warning(s).
What are you doing?
